# VBN_code

./: .gitignore  pyproject.toml
vbn_code/Figure notebooks/: Figure1.ipynb  Figure2_co.ipynb  Figure3_FigureS8.ipynb  Figure4_Figure5_FigureS9_FigureS10_FigureS11_FigureS12_co.ipynb  Figure6_FigureS13.ipynb  Figure6_co.ipynb  Figure7.ipynb  FigureS13.ipynb  FigureS14.ipynb  FigureS14_2.ipynb  FigureS2.ipynb  FigureS3.ipynb  FigureS5_FigureS13_FigureS14.ipynb  FigureS6_co.ipynb  FigureS7_co.ipynb  Methods.ipynb
vbn_code/hpc_code/: add_quality_to_master_units_table.py  calculate_stim_responsiveness.py  calculate_stim_responsiveness_over_time.py  decoding_utils.py  make_stim_trial_tables.py  run_GLM_prediction_psths.py  run_decoder_area_comparison_monte_carlo.py  run_decoding_dropouts.py  run_flash_to_flash_distance_metrics.py  run_image_decoding.py  run_image_decoding_sliding_window.py  run_opto_metrics.py  run_pooled_decoding.py  run_rf_arrays.py  run_rfs.py  run_session_decoding.py  run_slurm.py  run_slurm_single_script.py  stimwise_running_speed.py  tensor_utils.py  utilities.py  vbn_utils.py
vbn_code/utilities/: analysis_utils.py  build_master_stim_table.py  build_opto_metrics.py  ccf_utils.py  decoding_utils.py  make_unit_responsiveness_table.py  make_unit_rf_table.py  make_unit_tensor.py  notebook_utils.py  nwb_session_utils.py  opto_tagging_utils.py  vbn_4day_utils.py  vbn_utils.py
